--- a/www/custom.html
+++ b/www/custom.html
@@ -79,6 +79,9 @@
                 <details id="uci-defaults-details" class="config-section">
                     <summary>
                         <h4 class="tr-uci">UCI-defaults (Boot configuration script)</h4>
+                        <div id="uci-defaults-size-info" class="file-size-info">
+                            <span id="uci-defaults-size"></span>
+                        </div>
                     </summary>
                     <div id="uci-defaults-group">
                         <textarea
