--- a/www/custom.html
+++ b/www/custom.html
@@ -37,8 +37,9 @@
                         <h4 class="tr-postinst">Postinst (Package installation script)</h4>
                         <div id="postinst-additional-info" class="additional-package-info">
                             <span id="package-size-breakdown"></span>
+                            <span id="package-size-note" class="file-size-note tr-package-size-note"></span>
                         </div>
-                    </summary>   
+                    </summary> 
                     <textarea
                         id="asu-packages"
                         autocomplete="off"
@@ -81,6 +82,7 @@
                         <h4 class="tr-uci">UCI-defaults (Boot configuration script)</h4>
                         <div id="uci-defaults-size-info" class="file-size-info">
                             <span id="uci-defaults-size"></span>
+                            <span id="uci-size-limit" class="file-size-note tr-uci-size-limit"></span>
                         </div>
                     </summary>
                     <div id="uci-defaults-group">
