--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     </div>
 
                     <!-- Terminal Explanation -->
-                    <div class="bordered-element">
+                    <div class="explanation-box">
                         <p id="terminal-explanation-text" data-i18n="aiosExplanation">Menu-based configuration script for OpenWrt initial setup.</p>
                     </div>
                 </section>
@@ -193,7 +193,7 @@
                     </div>
 
                     <!-- Setup Explanation -->
-                    <div class="bordered-element">
+                    <div class="explanation-box">
                         <p id="setup-explanation-text" data-i18n="windowsSetupExplanation">Download the protocol handler registry file and double-click to install it.</p>
                     </div>
                 </section>
