--- a/www/custom.html
+++ b/www/custom.html
@@ -14,7 +14,7 @@
             </summary>
             <div id="package-selector-config">
                 <div class="package-search-container config-section">
-                    <h4 class="tr-package-search">Package Search</h4>
+                    <h4><span class="tr-package-search">Package Search</span></h4>
                     <div id="package-search-autocomplete" class="autocomplete">
                         <input type="text"
                             id="package-search"
@@ -57,7 +57,7 @@
             </summary>
             <div id="scripts-config">
                 <div class="commands-container config-section">
-                    <h4 class="tr-add-commands">Add commands</h4>
+                    <h4><span class="tr-add-commands">Add commands</span></h4>
                     <div id="commands-autocomplete" class="autocomplete">
                         <input type="text"
                             id="command"
