--- a/www/custom.html
+++ b/www/custom.html
@@ -10,6 +10,10 @@
     <div id="settings-bar-template" style="display: none;">
         <div id="settings-bar">
             <div class="settings-bar-content">
+                <div id="asu-status-container" class="asu-status">
+                    <span id="asu-status-indicator" class="status-indicator status-checking">●</span>
+                    <span id="asu-status-text" class="status-text tr-asu-status-checking">Checking...</span>
+                </div>
                 <button id="import-settings-btn" class="settings-btn" title="Import Settings">
                     📥 <span class="tr-import-settings">Import</span>
                 </button>
