--- a/www/custom.html
+++ b/www/custom.html
@@ -50,7 +50,7 @@
                 
                 <details id="postinst-details" class="config-section">
                     <summary>
-                        <h4 class="tr-postinst">Postinst (Package installation script)</h4>
+                        <h4 class="tr-postinst">Post-Install (Package installation script)</h4>
                         <div id="postinst-additional-info" class="additional-package-info">
                             <span id="package-size-breakdown"></span>
                             <br>
