--- a/www/custom.html
+++ b/www/custom.html
@@ -14,6 +14,13 @@
                     <span id="asu-status-indicator" class="status-indicator status-checking">●</span>
                     <span id="asu-status-text" class="status-text tr-asu-status-checking">Checking...</span>
                 </div>
+                
+                <!-- カスタムビルド表示 -->
+                <div id="custom-build-badge" class="custom-build-badge">
+                    <span class="badge-icon">🔧</span>
+                    <span class="badge-text tr-custom-build-label">Custom Build (Unofficial)</span>
+                </div>
+                
                 <button id="import-settings-btn" class="settings-btn" title="Import Settings">
                     📥 <span class="tr-import-settings">Import</span>
                 </button>
