--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                 <section id="openwrt-official" class="content-section">
                     <h2 class="section-title" data-i18n="OpenWrtCustom">Firmware Selector (Custom)</h2>
                     <ul class="link-list">
-                        <li><a href="#" onclick="window.open('https://site-u.pages.dev/www/?_=' + Date.now(), '_blank'); return false;" data-i18n="firmwareDownload" class="link-item bordered-element">
+                        <li><a href="https://site-u.pages.dev/www/" target="_blank" rel="noopener" data-i18n="firmwareDownload" class="link-item bordered-element">
                             <span class="link-text">Download OpenWrt firmware for your device</span>
                         </a></li>
                     </ul>
